refactor: modernize terminal Collectors.toList() and instanceof cast (#906 Q8)
Replace 19 terminal .collect(Collectors.toList()) with Stream.toList()
across MaterialCategoryController, BlueprintCraftabilityService,
JobOrderService, PaginationUtil (backend) and JobOrderPageController
(frontend, 15 sites), dropping the now-unused java.util.stream.Collectors
imports where nothing else uses them. Each produced list was verified to be
read-only downstream (returned to serializers, passed into immutable record
DTOs, or iterated), so the unmodifiable list from Stream.toList() is safe.
Also apply a pattern-match instanceof in HangarPageController.parseLong.

Deliberately unchanged: InventoryItemService uses Collectors.toList() as the
groupingBy downstream collector (Stream.toList() is not a Collector), and the
Integer.valueOf sites are either int-boxing (not parsing) or parse into an
Integer target where valueOf is already the idiomatic call — swapping to
parseInt would only add an implicit autobox.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Signed-off-by: Lucas Greuloch (greluc) <lucas.greuloch@gmail.com>